<resources>
    <string name="app_name">识音</string>
    <string name="title_music">音乐创作</string>
    <string name="title_collection">个人收藏</string>
    <string name="title_tutorial">教程</string>
    <string name="title_info">信息</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="add_prompt">请输入你创建的新文件夹名称</string>
    <string name="title_activity_file">文件收藏</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="upload_hint">点击上传你的音频</string>
    <string name="transfer">听曲识谱</string>
    <string name="input_hint">输入想要生成的音乐描述</string>
    <string name="generate">Generating!\nWaiting for a while please</string>
    <string name="finish">完成</string>
    <string name="login">用户登录</string>
    <string name="welcome">识音</string>
    <string name="text2audio">Text2Audio</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">重新播放</string>
    <string name="save">保存</string>
    <string name="exit">退出</string>
    <string name="generate_success">Generate sheet music successfully!</string>
    <string name="delete">删除</string>

</resources>