<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_music">

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.myapplication.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.example.myapplication.ui.collection.CollectionFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/navigation_tutorial"
        android:name="com.example.myapplication.ui.tutorial.TutorialFragment"
        android:label="@string/title_tutorial"
        tools:layout="@layout/fragment_tutorial" />
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.myapplication.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>